# Lab4

./: CMakeLists.txt
src/: OMPLogic.cpp  cuda_kernels.cu  cuda_kernels.cuh  main.cpp  main.cpp.cu  sequentialLogic.cpp  threadingLogic.cpp
